# infra

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  hosts.example  package-lock.json  package.json  pass.sh  requirements.in  requirements.txt  requirements.yml  run.yml  upload_iso.yml
.github/workflows/: build-and-push-py310.yml  build-replay-hub.yml  cd-containers.yml  cd.yml  ci.yml
backups/: backup-post.sh  backup-pre.sh
deployment/automation/: check-kustomize-configs.sh  deploy.sh  list-live-targets.py  migrate-configs.py  service.schema.json  test-gen-configs.sh  validate-container-configs.py  validate-service-configs.js  validate-service-configs.py
deployment/containers/: install  inventory.example.yml  inventory.yml  secrets-scaffold.yml  secrets.example.yml
deployment/kubernetes/: Makefile  README.md  bootstrap
deployment/mac/: README.md  install.sh
docs/: proxmox-setup.md  proxmox-template-setup.md  vendor-example.yml
group_vars/all/: vars.yml
playbooks/: update-proxmox-hosts.yml  update.yml
roles/: bootstrap
spike/foundation-images/py310/: Dockerfile  Makefile  README.md  pyproject.toml
spike/replay-hub/: .dockerignore  .env.example  .env.local.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
spike/replay-hub/app/: __init__.py  config.py  database.py  file_client.py  main.py  models.py  webdav_client.py
spike/replay-hub/app/routes/: __init__.py  clips.py  metadata.py
spike/replay-hub/app/static/css/: custom.css
spike/replay-hub/app/static/js/: app.js
spike/replay-hub/app/templates/: base.html  clip_detail.html  index.html
spike/replay-hub/scripts/: annotate.py  arrange.py  encode.py  migrate_metadata.py
tasks/: list_services.yml
(+477 files in other folders)
