[tool.poetry]
name = "py310"
version = "0.1.0"
description = ""
authors = ["shikharbhardwaj <shikharbhardwaj68@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
prometheus-client = "^0.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
