[tool.poetry]
name = "py310"
version = "0.1.0"
description = ""
authors = ["shikharbhardwaj <email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
prometheus-client = "^0.20.0"
aiohttp = "^3.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
